add node 25 support

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "build:cli": "tsc -p build/tsconfig/tsconfig.esm.cli.json",
     "build:umd": "cross-env BUILD_TARGET='umd' vite --config build/vite.config.ts build",
     "build:browser:cjs": "cross-env BUILD_TARGET='cjs' vite --config build/vite.config.ts build",
-    "test": "node build/runCommands.js ./npm.run.test.json",
+    "test": "npm run build && npm run test:nobuild",
+    "test:nobuild": "node build/runCommands.js ./npm.run.test.json",
     "test:imports": "node --test tests/import/*.test.*",
     "test:node:versions:GE:20": "tsx --test tests/node/*.test.ts",
     "test:node:versions:17:18:19": "node tests/node/scripts/testVersionsWithoutNodeTest.cjs",
