--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -75,8 +75,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        #node-version: [17.x, 18.x, 19.x, 20.x, 21.x, 22.x, 23.x, 24.x, node] # 'node' means latest stable version
-        node-version: [18.x, 19.x, 20.x, 21.x, 22.x, 23.x, 24.x, node] # 'node' means latest stable version
+        node-version: [17.x, 18.x, 19.x, 20.x, 21.x, 22.x, 23.x, 24.x, node] # 'node' means latest stable version
+        #node-version: [18.x, 19.x, 20.x, 21.x, 22.x, 23.x, 24.x, node] # 'node' means latest stable version
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
