update workflow, revert version bump

--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -155,6 +155,9 @@ jobs:
     needs: [test-imports, test-cli, test-legacy-node-versions, test-supported-node-versions, test-bun, test-browsers, test-deno]
     if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[publish] ')
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write # required for OIDC
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -163,6 +166,7 @@ jobs:
         with:
           node-version: 24.x
           registry-url: "https://registry.npmjs.org/"
+          always-auth: true # ensures the OIDC token is used automatically
       - name: Install dependencies
         run: npm install --ignore-scripts
       - name: Automated Version Bump
@@ -174,7 +178,31 @@ jobs:
           minor-wording: "#minor"
           patch-wording: "#patch"
       - name: Publish to npm
-        shell: bash
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
+#  maybe-publish:
+#    needs: [test-imports, test-cli, test-legacy-node-versions, test-supported-node-versions, test-bun, test-browsers, test-deno]
+#    if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[publish] ')
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#      - name: Setup Node
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 24.x
+#          registry-url: "https://registry.npmjs.org/"
+#      - name: Install dependencies
+#        run: npm install --ignore-scripts
+#      - name: Automated Version Bump
+#        uses: phips28/gh-action-bump-version@v11.0.7
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          major-wording: "#major"
+#          minor-wording: "#minor"
+#          patch-wording: "#patch"
+#      - name: Publish to npm
+#        shell: bash
+#        run: npm publish
+#        env:
+#          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
