--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -110,7 +110,7 @@ jobs:
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: v1.2.22
+          bun-version: latest
       - name: Install dependencies
         run: bun install
       - name: Run Bun tests
