--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -1,10 +1,9 @@
 name: tests_and_publish.yaml
 
 on:
-  workflow_run:
-    workflows: ["nightly.yaml"]
-    types:
-      - completed
+  schedule:
+    - cron: "0 6 * * *" # Midnight CST
+  workflow_dispatch:
   push:
     branches:
       - main
